--- a/src/main/webapp/month.html
+++ b/src/main/webapp/month.html
@@ -1,11 +1,11 @@
-<html ng-app="limecashMonth">
+<html ng-app="limecash">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Budget Month</title>
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="assets/angular/month.js"></script>
+    <script src="assets/angular/angular.js"></script>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
