--- a/src/main/webapp/shared/header.html
+++ b/src/main/webapp/shared/header.html
@@ -4,12 +4,12 @@
         <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
                 class="navbar-toggler-icon"></span></button>
         <div
-                class="collapse navbar-collapse text-left" id="navcol-1">
+                class="collapse navbar-collapse text-left" id="navcol-1" style="height: 50px">
             <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item" role="presentation"><a class="nav-link active text-left" href="budgetSheet.html"
-                                                            style="color: rgba(255,255,255,0.9);">Budget Sheet:</a></li>
+                <li style="margin: 10px"><a class="pull-right" href="budgetSheet.html" style="color: rgba(255,255,255,0.9);">Budget</a></li>
+                <li style="margin: 10px"><a class="pull-right" href="income.html" style="color: rgba(255,255,255,0.9);">Income</a></li>
             </ul>
-            <li class="dropdown" style="color: rgb(0,0,0);"><a class="dropdown-toggle" data-toggle="dropdown"
+            <li class="dropdown" style="color: rgb(0,0,0);"><a class="dropdown-toggle pull-right text-right" data-toggle="dropdown"
                                                                aria-expanded="false" href="#"
                                                                style="color: rgba(255,255,255,0.57);margin: 26px;">Month</a>
                 <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation"
@@ -33,7 +33,8 @@
                         class="dropdown-item" role="presentation" href="month.html?month=May">May</a></div>
             </li>
         </div>
-        <a href="#"><i class="fa fa-cog" style="font-size: 32px;margin: 8px;color: rgb(255,255,255);"></i></a><a
+        <a href="/accountSetUp.html"><i class="fa fa-cog" style="font-size: 32px;margin: 8px;color: rgb(255,255,255);"></i></a>
+        <a
                 href="/logout"><i class="fa fa-sign-out"
                                   style="font-size: 32px;margin: 8px;color: rgb(255,255,255);"></i></a></div>
 </nav>
