--- a/src/main/webapp/budgetSheet.html
+++ b/src/main/webapp/budgetSheet.html
@@ -31,9 +31,7 @@
 </script>
 <div id="header"></div>
 <div class="table-responsive table-borderless text-center" style="color: rgba(255,255,255,0);font-size: 16px;background-color: rgba(255,255,255,0);margin: 0px;padding: 0px;" ng-controller="budgetTable">
-    <button class="btn btn-primary" ng-click="saveBudgets()" type="button" style="background-color: rgb(76,200,0);">
-        Save Changes
-    </button>
+    <p style="color: white; font-weight: bolder; font-size: x-large">Budget Management</p>
     <table class="table table-bordered table-sm">
         <thead>
         <tr>
@@ -58,21 +56,23 @@
         </thead>
         <tr ng-repeat="budget in budgets">
             <td><span contenteditable="false">{{budget.budgetName}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,0,$event)">{{budget.months[0]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,1,$event)">{{budget.months[1]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,2,$event)">{{budget.months[2]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,3,$event)">{{budget.months[3]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,4,$event)">{{budget.months[4]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,5,$event)">{{budget.months[5]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,6,$event)">{{budget.months[6]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,7,$event)">{{budget.months[7]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,8,$event)">{{budget.months[8]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,9,$event)">{{budget.months[9]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,10,$event)">{{budget.months[10]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,11,$event)">{{budget.months[11]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,0,$event)">{{budget.months[0]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,1,$event)">{{budget.months[1]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,2,$event)">{{budget.months[2]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,3,$event)">{{budget.months[3]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,4,$event)">{{budget.months[4]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,5,$event)">{{budget.months[5]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,6,$event)">{{budget.months[6]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,7,$event)">{{budget.months[7]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,8,$event)">{{budget.months[8]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,9,$event)">{{budget.months[9]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,10,$event)">{{budget.months[10]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,11,$event)">{{budget.months[11]}}</span></td>
         </tr>
     </table>
-
+    <button class="btn btn-primary" ng-click="saveBudgets()" type="button" style="background-color: rgb(76,200,0);">
+        Save Changes
+    </button>
 </div>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
