--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,7 +49,7 @@
             </td>
             <td>
                 <button class="btn btn-primary" type="button" ng-click="setYear()"
-                        style="background-color: rgb(0,162,45);height: 30px;width: 100px;font-size: 12px;">Set Year
+                        style="background-color: rgb(0,162,45);height: 30px;width: 90px;font-size: 12px;">Set Year
                 </button>
             </td>
         </tr>
@@ -143,18 +143,54 @@
         <tr></tr>
         </tbody>
     </table>
-    <a href="/AddTrans.html">
-        <button class="btn btn-primary" type="button"
-                style="background-color: rgb(0,162,45);height: 80px;width: 150px;font-size: 19px;">Add Transaction
-        </button>
-    </a>
-    <a href="/AddTransfer.html">
-        <button class="btn btn-primary" type="button"
-                style="background-color: rgb(0,162,45);height: 80px;width: 150px;font-size: 19px;">Add Transfer
-        </button>
-    </a>
+    <div>
+        <table>
+            <tr>
+                <td rowspan="3">
+                    <table class="table table-sm" style="margin: 20px">
+                        <thead>
+                        <tr style="color: rgba(33,37,41,0);"></tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th class="text-center" colspan="2">Remaining in {{month}} {{yearSharedData.getYear()}}</th>
+                        </tr>
+                        <tr style="color: rgba(0,128,255,0); font-size: small; margin: 0px"
+                            ng-repeat="i in range(0,monthBudget.areas.length)">
+                            <th class="text-center">{{monthBudget.areas[i]}}</th>
+                            <th class="text-center">{{monthBudget.remaining[i]}}</th>
+                        </tr>
+                        <tr style="color: rgba(0,128,255,0); font-size: small">
+                            <th class="text-right">TOTAL:</th>
+                            <th class="text-left">£{{totalBudget}}</th>
+                        </tr>
+                        </tbody>
+                    </table>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <a href="/AddTrans.html">
+                    <button class="btn btn-primary" type="button"
+                            style="background-color: rgb(0,162,45);height: 40px;width: 140px;font-size: 14px;">Add
+                        Transaction
+                    </button>
+                </a>
+                <a href="/AddTransfer.html">
+                    <button class="btn btn-primary" type="button"
+                            style="background-color: rgb(0,162,45);height: 40px;width: 110px;font-size: 14px;">Add
+                        Transfer
+                    </button>
+                </a>
+            </tr>
+            <tr>
+                <td>
+                    <img src="assets/img/lineGraph.png" style="width: 80vw;padding: 40px;height: 40vh;">
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
-<img src="assets/img/lineGraph.png" style="width: 99vw;padding: 50px;height: 50vh;">
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
