Updated: TODO: Got to get the logic in place for identifiying money in which accounts moves work best Need to get analytical graph and funding move alerts setup on index page

--- a/src/main/webapp/accountSetUp.html
+++ b/src/main/webapp/accountSetUp.html
@@ -58,7 +58,7 @@
                         </tr>
                         <tr style="color: rgba(0,128,255,0);" ng-repeat="i in range(0,accounts.length - 1)">
                             <td class="text-center"><span contenteditable="false">{{accounts[i].id}}</span></td>
-                            <td class="text-center"><input type="text" class="" ng-model="accounts[i].name"></td>
+                            <td class="text-center"><input type="text" ng-model="accounts[i].name"></td>
                             <td class="text-center"><input type="text" ng-model="accounts[i].provider"></td>
                             <td class="text-center"><input type="text" ng-model="accounts[i].minimumBalance"></td>
                             <td class="text-center"><input type="text" ng-model="accounts[i].maximumBalance"></td>
